ops360/infra/01.ingress/02.ops360-swagger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops360-swagger-services 
  namespace: uat01 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - bdms-service.ops360uat01.acx-sandbox.net
    - process-tracking.ops360uat01.acx-sandbox.net
    - ac-dl-ingest.ops360uat01.acx-sandbox.net
    secretName: ops360uat01-cert 
  rules:
    - host: bdms-service.ops360uat01.acx-sandbox.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bdms-service
                port:
                  number: 6969
    - host: process-tracking.ops360uat01.acx-sandbox.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: process-tracking
                port:
                  number: 8090
    - host: ac-dl-ingest.ops360uat01.acx-sandbox.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ac-dl-ingest
                port:
                  number: 9010
